fixed faulty gap variables value

--- a/src/assets/sass/common/_variables.sass
+++ b/src/assets/sass/common/_variables.sass
@@ -77,7 +77,7 @@ $osg-space-7: 100px !default
 
 // Media Queries
 // media query defaults mimicks the bulma defaults
-$osg-gap: 64px !default
+$osg-gap: 32px !default
 $osg-tablet: 769px !default
 $osg-desktop: 960px + (2 * $osg-gap) !default
 $osg-widescreen: 1152px + (2 * $osg-gap) !default
